[package]
name = "typesafebuilder"
version = "0.1.0"
edition = "2021"
authors = ["Andrey Khranovsky <andrey.khranovsky@gmail.com>"]
license = "MIT"
description = "Typesafe builder for structs"
repository = "https://github.com/AKhranovskiy/typesafebuilder"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
